[package]
name = "morpho-web-lt"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "morpho-server"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.17"
actix-files = "0.6"
env_logger = "0.9"
log = "0.4"
rustls = "0.20.2"
rustls-pemfile = "1"
uuid = { version = "0.4", features = ["serde", "v4"] }
